--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <!--MENSAJE 0.3 -->
       <section class="container-fluid" id="msj3">
 
-      <h1 class="mensaje">"Lorem ipsum dolor sit amet, consetetur ampor, illo"</h1>
+      <h1 class="mensaje">" ALL FOR DESIGN & DESIGN FOR ALL"</h1>
       </section>
       <!--CLIENTES -->
     <div class="container-fluid clientes__white">
