--- a/servicios.html
+++ b/servicios.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- CSS SWIPEBOX -->
+  <link rel="stylesheet" href="Assets/swipebox-master/src/css/swipebox.css">
   <!-- CSS -->
   <link rel="stylesheet" href="Assets/css/style.css">
   <!--GOOGLE FONTS -->
@@ -25,14 +27,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-      <a class="navbar-brand logo_absolute" href="index.html"><img src="Assets/img/logo1.png" alt="" class="img__logonav"> </a>
+        <a class="navbar-brand logo_absolute" href="index.html"><img src="Assets/img/logo1.png" alt="" class="img__logonav"> </a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right color-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="bio.html">Bio</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
+          <li class="active"><a href="#">Servicios</a></li>
           <li><a href="proyectos.html">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -40,63 +42,89 @@
     </div> <!--Cierre container fluid-->
   </nav>
 
-<!--COMIENZO DEL CARROUSEL-->
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="Assets/img/banner2.png" alt="...">
-        <div class="carousel-caption">
-          <h1 class="titulos">HOLA!</h1>
-          <p>BIENVENIDO A MI PORTAFOLIO CREATIVO <br>
-            SOY DENISSE LARA</p>
-        </div>
-      </div>
-      <div class="item">
-        <img src="Assets/img/banner2.png" alt="...">
-        <div class="carousel-caption">
-
-        </div>
-      </div>
-
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-<!--FIN DEL CARROUSEL-->
-
-
-
   <!--SERVICIOS -->
-  <section class="container-fluid">
-    <div class="row container__white">
+  <section class="container-fluid container__top">
+    <div class="row container__servicio">
       <div class="col-md-offset-2 col-lg-8 col-md-8 col-sm-12 col-xs-12">
-        <div class="servicios__hijo">
-          <h1 class="titulos"> ESTOS SON LOS SERVICIOS EN QUE PUEDO AYUDARTE </h1>
 
+
+        <div class="servicios__hijo">
+          <h1 class="titulos titulos__grey"> ESTOS SON LOS SERVICIOS <br>EN QUE PUEDO AYUDARTE </h1>
+
+          <div class="row border_top">
+            <div class="col-md-3">
           <ul class="padding__cero">
             <li class="thumbnail__servicios">
               <a href="#" class="thumbnail">
                 <i class="fas fa-6x fa-pen-nib icon__servicios"></i>
-                <h4>Digital</h4>
               </a>
             </li>
+          </ul>
+        </div><!--cierre col 6-->
+        <div class="col-md-9 container__st">
+          <h1>DIGITAL</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Cum officia similique, sit accusantium! Eveniet facere quas ad
+            necessitatibus vel assumenda, illo a autem, dolores aliquam
+            reprehenderit nulla ratione, vitae maxime?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Cum officia similique, sit accusantium! Eveniet facere quas ad
+              necessitatibus vel assumenda, illo a autem, dolores aliquam
+              reprehenderit nulla ratione, vitae maxime?
+          </p>
+        </div>
+          </div>
 
+          <div class="row">
+            <div class="col-md-3">
+          <ul class="padding__cero">
+            <li class="thumbnail__servicios">
+              <a href="#" class="thumbnail">
+                <i class="fas fa-6x fa-tint icon__servicios"></i>
+              </a>
+            </li>
+          </ul>
+        </div><!--cierre col 6-->
+
+        <div class="col-md-9 container__st">
+          <h1>IMPRENTA</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Cum officia similique, sit accusantium! Eveniet facere quas ad
+            necessitatibus vel assumenda, illo a autem, dolores aliquam
+            reprehenderit nulla ratione, vitae maxime?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Cum officia similique, sit accusantium! Eveniet facere quas ad
+              necessitatibus vel assumenda, illo a autem, dolores aliquam
+              reprehenderit nulla ratione, vitae maxime?
+          </p>
+        </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-3">
+          <ul class="padding__cero">
+            <li class="thumbnail__servicios">
+              <a href="#" class="thumbnail">
+                <i class="fas fa-6x fa-desktop icon__servicios"></i>
+              </a>
+            </li>
+          </ul>
+        </div><!--cierre col 6-->
+        <div class="col-md-9 container__st">
+          <h1>FRONT</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Cum officia similique, sit accusantium! Eveniet facere quas ad
+            necessitatibus vel assumenda, illo a autem, dolores aliquam
+            reprehenderit nulla ratione, vitae maxime?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Cum officia similique, sit accusantium! Eveniet facere quas ad
+              necessitatibus vel assumenda, illo a autem, dolores aliquam
+              reprehenderit nulla ratione, vitae maxime?
+          </p>
+        </div>
+          </div>
+
+          <!--
             <li class="thumbnail__servicios">
               <a href="#" class="thumbnail">
                 <i class="fas fa-6x fa-tint icon__servicios"></i>
@@ -110,63 +138,20 @@
                 <h4>Front-End</h4>
               </a>
             </li>
-          </ul>
-        </div>
-      </div>
-    </div><!--cierre row -->
+          </ul>-->
+        </div><!--servicios hijo-->
+      </div><!--col md 12-->
+    </div><!--cierre row container servicios-->
   </section>
 
-  <!--MENSAJE 0.2 -->
-  <section class="container-fluid" id="msj2">
+  <!--MENSAJE 0.3 -->
+  <section class="container-fluid" id="msj3">
 
-    <h1 class="mensaje">"La CREATIVIDAD es la INTELIGENCIA divirtiendose"</h1>
+    <h1 class="mensaje">" ALL FOR DESIGN & DESIGN FOR ALL"</h1>
   </section>
 
-  <!--PROYECTOS -->
-  <section>
-    <div class="container-fluid">
-      <h1 class="titulos"> ALGUNOS DE MIS PROYECTOS </h1>
-      <div class="row">
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/1.png" alt="image" class="img-responsive">
-        </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/2.png" alt="image" class="img-responsive">
-        </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/3.png" alt="image" class="img-responsive">
-        </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/4.png" alt="image" class="img-responsive">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/5.png" alt="image" class="img-responsive">
-        </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/6.png" alt="image" class="img-responsive">
-        </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/7.png" alt="image" class="img-responsive">
-        </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/8.png" alt="image" class="img-responsive">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
-
-<!--MENSAJE 0.3 -->
-<section class="container-fluid" id="msj3">
-
-  <h1 class="mensaje">" ALL FOR DESIGN & DESIGN FOR ALL"</h1>
-</section>
-
-
-<!--FOOTER LOGUITOS HYS -->
+<!--FOOTER -->
 <footer class="container-fluid footer__fixed">
 
   <ul class="footer__logos">
@@ -176,7 +161,6 @@
 
 
   </footer>
-
 
   <!-- Jquery 3.3.1 -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
