--- a/servicios.html
+++ b/servicios.html
@@ -44,12 +44,12 @@
 
   <!--SERVICIOS -->
   <section class="container-fluid container__top">
-    <div class="row container__servicio">
-      <div class="col-md-offset-2 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+    <div class="row container__servicio ">
+      <div class="col-md-offset-2 col-lg-8 col-md-8 col-sm-12 col-xs-12 servicios__hijo">
 
 
-        <div class="servicios__hijo">
-          <h1 class="titulos titulos__grey"> ESTOS SON LOS SERVICIOS <br>EN QUE PUEDO AYUDARTE </h1>
+        <div class="">
+          <h1 class="titulos titulos__grey"> ESTOS SON LOS SERVICIOS EN QUE PUEDO AYUDARTE </h1>
 
           <div class="row border_top">
             <div class="col-md-3">
