--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="Assets/img/banner2.png" alt="...">
+        <img src="Assets/img/banner2.1.png" alt="..." >
         <div class="carousel-caption">
-          <h1 class="titulos">HOLA!</h1>
+        <!--  <h1 class="titulos">HOLA!</h1>
           <p>BIENVENIDO A MI PORTAFOLIO CREATIVO <br>
-            SOY DENISSE LARA</p>
+            SOY DENISSE LARA</p>-->
         </div>
       </div>
       <div class="item">
-        <img src="Assets/img/banner2.png" alt="...">
+        <img src="Assets/img/banner1.png" alt="...">
         <div class="carousel-caption">
 
         </div>
@@ -87,7 +87,8 @@
     <div class="row container__white">
       <div class="col-md-offset-2 col-lg-8 col-md-8 col-sm-12 col-xs-12">
         <div class="servicios__hijo">
-          <h1 class="titulos"> ESTOS SON LOS SERVICIOS EN QUE PUEDO AYUDARTE </h1>
+          <h1 class="titulos"> Estos son los servicios en que puedo ayudarte </h1>
+          <span class="border_top"></span>
 
           <ul class="padding__cero">
             <li class="thumbnail__servicios">
@@ -125,7 +126,7 @@
   <!--PROYECTOS -->
   <section>
     <div class="container-fluid">
-      <h1 class="titulos"> ALGUNOS DE MIS PROYECTOS </h1>
+      <h1 class="titulos"> Algunos de mis proyectos </h1>
       <div class="row">
         <div class="col-md-3 padding__cero">
           <img src="Assets/img/1.png" alt="image" class="img-responsive">
