--- a/proyectos.html
+++ b/proyectos.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <!-- CSS SWIPEBOX -->
   <link rel="stylesheet" href="Assets/swipebox-master/src/css/swipebox.css">
   <!-- CSS -->
   <link rel="stylesheet" href="Assets/css/style.css">
@@ -46,31 +45,31 @@
     <!--PROYECTOS -->
     <section>
       <div class="container-fluid container__top">
-        <h1 class="titulos"> PORTAFOLIO DE PROYECTOS </h1>
+        <h1 class="titulos titulos__proyectos"> PORTAFOLIO DE PROYECTOS </h1>
         <div class="row">
           <div class="col-md-3 padding__cero">
             <img src="Assets/img/1.png" alt="image" class="img-responsive">
           </div>
           <div class="col-md-3 padding__cero">
+            <img src="Assets/img/14.png" alt="image" class="img-responsive">
+          </div>
+          <div class="col-md-3 padding__cero">
             <img src="Assets/img/2.png" alt="image" class="img-responsive">
           </div>
+          <div class="col-md-3 padding__cero">
+            <img src="Assets/img/15.png" alt="image" class="img-responsive">
+          </div>
+        </div>
+        <div class="row">
           <div class="col-md-3 padding__cero">
             <img src="Assets/img/3.png" alt="image" class="img-responsive">
           </div>
           <div class="col-md-3 padding__cero">
+            <img src="Assets/img/12.png" alt="image" class="img-responsive">
+          </div>
+          <div class="col-md-3 padding__cero">
             <img src="Assets/img/4.png" alt="image" class="img-responsive">
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3 padding__cero">
-            <img src="Assets/img/5.png" alt="image" class="img-responsive">
-          </div>
-          <div class="col-md-3 padding__cero">
-            <img src="Assets/img/6.png" alt="image" class="img-responsive">
-          </div>
-          <div class="col-md-3 padding__cero">
-            <img src="Assets/img/7.png" alt="image" class="img-responsive">
-          </div>
           <div class="col-md-3 padding__cero">
             <img src="Assets/img/8.png" alt="image" class="img-responsive">
           </div>
@@ -81,28 +80,28 @@
             <img src="Assets/img/5.png" alt="image" class="img-responsive">
           </div>
           <div class="col-md-3 padding__cero">
-            <img src="Assets/img/6.png" alt="image" class="img-responsive">
+            <img src="Assets/img/10.png" alt="image" class="img-responsive">
           </div>
           <div class="col-md-3 padding__cero">
-            <img src="Assets/img/7.png" alt="image" class="img-responsive">
+            <img src="Assets/img/16.png" alt="image" class="img-responsive">
           </div>
           <div class="col-md-3 padding__cero">
-            <img src="Assets/img/8.png" alt="image" class="img-responsive">
+            <img src="Assets/img/9.png" alt="image" class="img-responsive">
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-3 padding__cero">
-            <img src="Assets/img/5.png" alt="image" class="img-responsive">
-          </div>
-          <div class="col-md-3 padding__cero">
-            <img src="Assets/img/6.png" alt="image" class="img-responsive">
-          </div>
-          <div class="col-md-3 padding__cero">
             <img src="Assets/img/7.png" alt="image" class="img-responsive">
           </div>
           <div class="col-md-3 padding__cero">
-            <img src="Assets/img/8.png" alt="image" class="img-responsive">
+            <img src="Assets/img/11.png" alt="image" class="img-responsive">
+          </div>
+          <div class="col-md-3 padding__cero">
+            <img src="Assets/img/13.png" alt="image" class="img-responsive">
+          </div>
+          <div class="col-md-3 padding__cero">
+            <img src="Assets/img/6.png" alt="image" class="img-responsive">
           </div>
         </div>
 
@@ -116,10 +115,11 @@
   <div class="container-fluid clientes__white">
     <section class="clientes__inner">
       <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 toolbar">
+
           <ul>
             <li class="clientes"> <img src="Assets/img/diversidad.png" alt="" class="img-responsive" id="diversidad"></li>
-            <li class="clientes"> <img src="Assets/img/chilquinta.png" alt="" class="img-responsive"></li>
+            <li class="clientes"> <img src="Assets/img/chilquinta.png" alt="" class="img-responsive" ></li>
             <li class="clientes"> <img src="Assets/img/guallarauco.png" alt="" class="img-responsive"></li>
             <li class="clientes"> <img src="Assets/img/lagos-dis.png" alt="" class="img-responsive"></li>
             <li class="clientes"> <img src="Assets/img/liquimax.png" alt="" class="img-responsive"></li>
@@ -132,7 +132,7 @@
   </div>
 
   <!--MENSAJE 0.3 -->
-  <section class="container-fluid" id="msj3">
+  <section class="container-fluid" id="msj_proyectos">
 
     <h1 class="mensaje">" ALL FOR DESIGN & DESIGN FOR ALL"</h1>
   </section>
@@ -147,10 +147,6 @@
 
 
     </footer>
-    <!-- SWIPEBOX -->
-    <script src="Assets/swipebox-master/lib/jquery-2.0.3.js"></script>
-    <script src="Assets/swipebox-master/src/js/jquery.swipebox.js"></script>
-
     <!-- Jquery 3.3.1 -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
