add: ultimos comentarios

--- a/contacto.html
+++ b/contacto.html
@@ -37,6 +37,7 @@
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="proyectos.html">Proyectos</a></li>
           <li class="active"><a href="#">Contacto</a></li>
+          <li><a href="comentarios.html">Comentarios</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div> <!--Cierre container fluid-->
@@ -75,10 +76,8 @@
                 <textarea class="form-control" id="message" name="message" placeholder="Ingresa tu mensaje" rows="7"></textarea>
               </div>
             </div>
-            <div class="form-group">
-              <div class="col-md-12 text-center">
-                <button type="button" class="btn btn-default btn-sm btn__banner" role="button">Enviar</button>
-              </div>
+            <div class="col-md-12 text-center">
+              <button type="button" class="btn btn-default btn-sm btn__banner" role="button">Enviar</button>
             </div>
           </fieldset>
         </form>
@@ -113,10 +112,6 @@
 
 
     </footer>
-    <!-- SWIPEBOX -->
-    <script src="Assets/swipebox-master/lib/jquery-2.0.3.js"></script>
-    <script src="Assets/swipebox-master/src/js/jquery.swipebox.js"></script>
-
     <!-- Jquery 3.3.1 -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
@@ -124,6 +119,6 @@
     <!-- Fontawesome 5 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-    <scrip src="Assets/js/script.js"></scrip>
+    <script src="Assets/js/script.js"></script>
   </body>
   </html>
