--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="proyectos.html">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="comentarios.html">Comentarios</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div> <!--Cierre container fluid-->
@@ -92,21 +93,21 @@
 
           <ul class="padding__cero">
             <li class="thumbnail__servicios">
-              <a href="#" class="thumbnail">
+              <a href="servicios.html" class="thumbnail">
                 <i class="fas fa-6x fa-pen-nib icon__servicios"></i>
                 <h4>Digital</h4>
               </a>
             </li>
 
             <li class="thumbnail__servicios">
-              <a href="#" class="thumbnail">
+              <a href="servicios.html" class="thumbnail">
                 <i class="fas fa-6x fa-tint icon__servicios"></i>
                 <h4>Imprenta</h4>
               </a>
             </li>
 
             <li class="thumbnail__servicios">
-              <a href="#" class="thumbnail">
+              <a href="servicios.html" class="thumbnail">
                 <i class="fas fa-6x fa-desktop icon__servicios"></i>
                 <h4>Front-End</h4>
               </a>
@@ -127,7 +128,7 @@
   <section>
     <div class="container-fluid">
       <h1 class="titulos"> Algunos de mis proyectos </h1>
-      <div class="row">
+      <!--<div class="row">
         <div class="col-md-3 padding__cero">
           <img src="Assets/img/1.png" alt="image" class="img-responsive">
         </div>
@@ -140,19 +141,31 @@
         <div class="col-md-3 padding__cero">
           <img src="Assets/img/4.png" alt="image" class="img-responsive">
         </div>
-      </div>
+      </div>-->
       <div class="row">
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/5.png" alt="image" class="img-responsive">
+        <div class="col-md-3 padding__cero container">
+          <a href="proyectos.html">
+            <img src="Assets/img/5.png" alt="image" class="img-responsive">
+            <div class="overlay"></div>
+          </a>
         </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/6.png" alt="image" class="img-responsive">
+        <div class="col-md-3 padding__cero container">
+          <a href="proyectos.html">
+            <img src="Assets/img/6.png" alt="image" class="img-responsive">
+            <div class="overlay"></div>
+          </a>
         </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/7.png" alt="image" class="img-responsive">
+        <div class="col-md-3 padding__cero container">
+          <a href="proyectos.html">
+            <img src="Assets/img/4.png" alt="image" class="img-responsive">
+            <div class="overlay"></div>
+          </a>
         </div>
-        <div class="col-md-3 padding__cero">
-          <img src="Assets/img/8.png" alt="image" class="img-responsive">
+        <div class="col-md-3 padding__cero container">
+          <a href="proyectos.html">
+            <img src="Assets/img/8.png" alt="image" class="img-responsive">
+            <div class="overlay"></div>
+          </a>
         </div>
       </div>
     </div>
