--- a/comentarios.html
+++ b/comentarios.html
@@ -5,21 +5,11 @@
   <title> Denisse Lara - Portfolio </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Latest compiled and minified CSS -->
-
-  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-
-  <script src="Assets/js/responsiveslides.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
   <!-- CSS -->
-  <link rel="stylesheet" href="Assets/css/responsiveslides.css">
-
-
-  <!-- CSS -->
-  <!-- <link rel="stylesheet" href="Assets/css/style.css"> -->
+  <link rel="stylesheet" href="Assets/css/style.css">
   <!--GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Fahkwang" rel="stylesheet">
 </head>
@@ -40,49 +30,66 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right color-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="bio.html">Bio</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="proyectos.html">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li class="active"><a href="#">Comentarios</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div> <!--Cierre container fluid-->
   </nav>
 
+<!--comentarios-->
+<div class="container container_comentarios">
   <div class="row">
-    <div class="col-md-12">
-      <ul class="rslides">
-        <li><img src="Assets/img/banner2.png" alt=""></li>
-        <li><img src="Assets/img/banner1.png" alt=""></li>
-        <li><img src="Assets/img/banner2.png" alt=""></li>
-      </ul>
+    <div class="col-xs-12 col-md-6">
+      <div class="row">
+        <div class="col-xs-1 col-md-1">
+          <img src="Assets/img/cat-icon.png" alt="" class="perfil img-responsive">
+        </div>
+        <form id="formulario">
+          <div class="col-xs-11 col-md-11">
+            <input class="form-control" rows="3" type="textarea" id="texto" placeholder="Déjame tu comentario">
+            <br>
+          </div>
+          <div class="col-md-12 text-right">
+            <input class="btn btn-default " type="submit" name="" value="Publicar">
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-12" id="publicacion">
+
+        </div>
+      </div>
     </div>
   </div>
-
-  <!--FOOTER LOGUITOS HYS -->
-  <footer class="container-fluid footer__fixed">
-
-    <ul class="footer__logos">
-      <a href=""><li class="footer__inline"><img src="Assets/img/usklogo.png" alt=""></li></a>
-      <a href=""><li class="footer__inline"><img src="Assets/img/logo.png" alt=""></li></a>
-      <a href=""><li class="footer__inline"><img src="Assets/img/il.png" alt=""></li></a>
+</div>
 
 
-    </footer>
+<!--FOOTER -->
+<footer class="container-fluid footer__fixed">
 
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="Assets/js/responsiveslides.min.js"></script> -->
-
-    <!-- Jquery 3.3.1 -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
-    <!-- Fontawesome 5 -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
-    <scrip src="Assets/js/script.js"></scrip>
+  <ul class="footer__logos">
+    <a href=""><li class="footer__inline"><img src="Assets/img/usklogo.png" alt=""></li></a>
+    <a href=""><li class="footer__inline"><img src="Assets/img/logo.png" alt=""></li></a>
+    <a href=""><li class="footer__inline"><img src="Assets/img/il.png" alt=""></li></a>
 
 
-  </body>
-  </html>
+  </footer>
+
+  <!-- Jquery 3.3.1 -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Fontawesome 5 -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+  <script src="Assets/js/comments.js"></script>
+</body>
+</html>
