--- a/servicios.html
+++ b/servicios.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <!-- CSS SWIPEBOX -->
-  <link rel="stylesheet" href="Assets/swipebox-master/src/css/swipebox.css">
   <!-- CSS -->
   <link rel="stylesheet" href="Assets/css/style.css">
   <!--GOOGLE FONTS -->
@@ -37,6 +35,7 @@
           <li class="active"><a href="#">Servicios</a></li>
           <li><a href="proyectos.html">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="comentarios.html">Comentarios</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div> <!--Cierre container fluid-->
@@ -45,13 +44,13 @@
   <!--SERVICIOS -->
   <section class="container-fluid container__top">
     <div class="row container__servicio ">
-      <div class="col-md-offset-2 col-lg-8 col-md-8 col-sm-12 col-xs-12 servicios__hijo">
+      <div class="col-md-offset-2 col-sm-offset-2 col-xs-offset-2 col-lg-8 col-md-8 col-sm-8 col-xs-8 servicios__hijo">
 
 
         <div class="">
-          <h1 class="titulos titulos__grey"> ESTOS SON LOS SERVICIOS EN QUE PUEDO AYUDARTE </h1>
-
-          <div class="row border_top">
+          <h1 class="titulos titulos__grey"> Soluciones a distintas necesidades </h1>
+          <span class="border_top"></span>
+          <div class="row">
             <div class="col-md-3">
           <ul class="padding__cero">
             <li class="thumbnail__servicios">
@@ -145,9 +144,8 @@
   </section>
 
   <!--MENSAJE 0.3 -->
-  <section class="container-fluid" id="msj3">
+  <section class="container-fluid" id="msj_servicios">
 
-    <h1 class="mensaje">" ALL FOR DESIGN & DESIGN FOR ALL"</h1>
   </section>
 
 
